--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
         let isPlaying = false;
 
         // 设置网易云音乐外链地址（替换为你的歌单地址）
-        const musicUrl = "你的网易云音乐外链地址";
+        const musicUrl = "http://163cn.tv/zhlZ74l";
         
         // 页面加载完成后自动开始播放
         window.addEventListener('load', function() {
