--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         /* 主页欢迎区域 */
         .hero {
             height: 100vh;
-            background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('your-background-image.jpg');
+            background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('https://www.helloimg.com/i/2024/11/20/673df2be085db.jpeg');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -107,50 +107,55 @@
             bottom: 20px;
             right: 20px;
             background: white;
-            border-radius: 50px;
+            border-radius: 12px;
             padding: 10px;
-            display: flex;
-            align-items: center;
             box-shadow: 0 2px 10px rgba(0,0,0,0.1);
             z-index: 1000;
             transition: all var(--transition-speed);
-            overflow: hidden;
-            width: 50px;
-            height: 50px;
+            width: 320px;
+            max-width: 90vw;
         }
 
-        .music-player.expanded {
-            width: 300px;
-            border-radius: 10px;
-        }
-
-        .player-icon {
-            width: 30px;
-            height: 30px;
-            background: var(--primary-color);
-            border-radius: 50%;
+        .player-header {
             display: flex;
             align-items: center;
-            justify-content: center;
+            justify-content: space-between;
+            margin-bottom: 10px;
+        }
+
+        .player-title {
+            font-weight: bold;
+            color: var(--primary-color);
+        }
+
+        .player-controls {
+            display: flex;
+            gap: 10px;
+        }
+
+        .player-button {
+            background: none;
+            border: none;
             cursor: pointer;
-            color: white;
-            flex-shrink: 0;
+            color: var(--primary-color);
+            padding: 5px;
+            transition: color 0.3s;
         }
 
-        .player-content {
-            margin-left: 10px;
-            overflow: hidden;
-            width: 0;
-            transition: width var(--transition-speed);
-        }
-
-        .music-player.expanded .player-content {
-            width: 240px;
+        .player-button:hover {
+            color: var(--accent-color);
         }
 
         .player-iframe {
             width: 100%;
-            height: 66px;
+            height: 450px;
+            border: none;
+            border-radius: 8px;
+        }
+
+        .music-player.minimized {
+            height: 50px;
+            overflow: hidden;
         }
 
         /* 动画定义 */
@@ -207,8 +212,8 @@
                 padding: 3rem 1rem;
             }
 
-            .music-player.expanded {
-                width: 250px;
+            .music-player {
+                width: 280px;
             }
         }
 
@@ -274,46 +279,32 @@
 
     <!-- 音乐播放器 -->
     <div class="music-player">
-        <div class="player-icon">
-            <i>♪</i>
+        <div class="player-header">
+            <span class="player-title">我的歌单</span>
+            <div class="player-controls">
+                <button class="player-button" id="minimizeBtn">
+                    <i class="fas fa-minus"></i>
+                </button>
+            </div>
         </div>
-        <div class="player-content">
-            <iframe class="player-iframe" 
-                    id="music-iframe"
-                    frameborder="0"
-                    allow="autoplay">
-            </iframe>
-        </div>
+        <iframe class="player-iframe" 
+                frameborder="0" 
+                src="https://music.163.com/outchain/player?type=0&id=399368731&auto=1&height=430">
+        </iframe>
     </div>
 
     <script>
-        // 音乐播放器功能
+        // 音乐播放器控制
         const musicPlayer = document.querySelector('.music-player');
-        const playerIcon = document.querySelector('.player-icon');
-        const playerIframe = document.querySelector('#music-iframe');
-        let isExpanded = false;
-        let isPlaying = false;
+        const minimizeBtn = document.getElementById('minimizeBtn');
+        let isMinimized = false;
 
-        // 设置你的网易云音乐外链地址
-        const musicUrl = "https://music.163.com/outchain/player?type=2&id=399368731&auto=1&height=66";
-
-        // 初始化音乐播放器
-        window.addEventListener('load', function() {
-            playerIframe.src = musicUrl;
-            setTimeout(() => {
-                isPlaying = true;
-                musicPlayer.classList.add('music-playing');
-            }, 1000);
-        });
-
-        // 播放器展开/收起功能
-        playerIcon.addEventListener('click', function() {
-            isExpanded = !isExpanded;
-            if (isExpanded) {
-                musicPlayer.classList.add('expanded');
-            } else {
-                musicPlayer.classList.remove('expanded');
-            }
+        minimizeBtn.addEventListener('click', () => {
+            isMinimized = !isMinimized;
+            musicPlayer.classList.toggle('minimized');
+            minimizeBtn.innerHTML = isMinimized ? 
+                '<i class="fas fa-expand"></i>' : 
+                '<i class="fas fa-minus"></i>';
         });
 
         // 页面滚动动画
